Checked 0_PlotFigures/01_characteristic

--- a/0_PlotFigures/01_characteristic/01_summary_of_base_quality.ipynb
+++ b/0_PlotFigures/01_characteristic/01_summary_of_base_quality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "500fe261",
    "metadata": {
     "ExecuteTime": {
@@ -10,23 +10,22 @@
      "start_time": "2024-01-23T09:08:25.661295Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:37:08.084536Z",
-     "iopub.status.busy": "2024-04-08T11:37:08.084208Z",
-     "iopub.status.idle": "2024-04-08T11:37:37.713049Z",
-     "shell.execute_reply": "2024-04-08T11:37:37.601117Z",
-     "shell.execute_reply.started": "2024-04-08T11:37:08.084518Z"
+     "iopub.execute_input": "2024-04-09T08:48:51.270615Z",
+     "iopub.status.busy": "2024-04-09T08:48:51.266505Z",
+     "iopub.status.idle": "2024-04-09T08:48:51.305330Z",
+     "shell.execute_reply": "2024-04-09T08:48:51.304885Z",
+     "shell.execute_reply.started": "2024-04-09T08:48:51.270584Z"
     }
    },
    "outputs": [],
    "source": [
     "import gzip\n",
-    "from collections import Counter, defaultdict\n",
-    "import multiprocessing as mp\n",
+    "from collections import Counter\n",
     "from Bio import SeqIO\n",
-    "import pysam\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "runs = [\"20220708_GM12878\", \"20220708_GM12878R2\", \"20220817_HG001\", \"20220915_P1\", \"20220916_P1\", \"20220916_P2\"]"
    ]
   },
   {
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "3dd4adb4",
    "metadata": {
     "ExecuteTime": {
@@ -49,18 +48,16 @@
      "start_time": "2024-01-23T09:09:09.447991Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:37:37.781173Z",
-     "iopub.status.busy": "2024-04-08T11:37:37.780410Z",
-     "iopub.status.idle": "2024-04-08T11:38:21.701642Z",
-     "shell.execute_reply": "2024-04-08T11:38:21.668159Z",
-     "shell.execute_reply.started": "2024-04-08T11:37:37.781150Z"
+     "iopub.execute_input": "2024-04-09T08:48:51.702432Z",
+     "iopub.status.busy": "2024-04-09T08:48:51.702017Z",
+     "iopub.status.idle": "2024-04-09T08:49:34.920893Z",
+     "shell.execute_reply": "2024-04-09T08:49:34.873199Z",
+     "shell.execute_reply.started": "2024-04-09T08:48:51.702412Z"
     }
    },
    "outputs": [],
    "source": [
-    "runs = [\"20220708_GM12878\", \"20220708_GM12878R2\", \"20220817_HG001\", \"20220915_P1\", \"20220916_P1\", \"20220916_P2\"]\n",
     "array = []\n",
-    "\n",
     "for run in runs:\n",
     "    fq = \"../../1_NanoStrandSeq/data/datasets/%s.fastq.gz\" % run\n",
     "    qs = []\n",
@@ -80,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "e8814952",
    "metadata": {
     "ExecuteTime": {
@@ -88,11 +85,11 @@
      "start_time": "2024-01-23T09:09:58.037224Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:38:21.814490Z",
-     "iopub.status.busy": "2024-04-08T11:38:21.814264Z",
-     "iopub.status.idle": "2024-04-08T11:38:32.419886Z",
-     "shell.execute_reply": "2024-04-08T11:38:32.419025Z",
-     "shell.execute_reply.started": "2024-04-08T11:38:21.814469Z"
+     "iopub.execute_input": "2024-04-09T08:49:46.596535Z",
+     "iopub.status.busy": "2024-04-09T08:49:46.594056Z",
+     "iopub.status.idle": "2024-04-09T08:49:54.689094Z",
+     "shell.execute_reply": "2024-04-09T08:49:54.687828Z",
+     "shell.execute_reply.started": "2024-04-09T08:49:46.596510Z"
     }
    },
    "outputs": [
@@ -109,15 +106,11 @@
    ],
    "source": [
     "fig, axs = plt.subplots(2, 3, figsize=(10, 4), sharex=True, sharey=True)\n",
-    "\n",
     "for i in range(len(runs)):\n",
     "    run = runs[i]\n",
     "    xs, ys, mean, median = array[i]\n",
-    "      \n",
-    "    row = int(i / 3)\n",
-    "    col = i % 3\n",
+    "    row, col = int(i / 3), i % 3\n",
     "    ax = axs[row][col]\n",
-    "        \n",
     "    plt.sca(ax)\n",
     "    plt.title(run)\n",
     "    plt.bar(xs, ys, width=1, color=\"none\", edgecolor=\"C0\")\n",
@@ -145,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "2649d161",
    "metadata": {
     "ExecuteTime": {
@@ -153,11 +146,11 @@
      "start_time": "2024-01-23T09:10:01.334244Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:39:41.741765Z",
-     "iopub.status.busy": "2024-04-08T11:39:41.740326Z",
-     "iopub.status.idle": "2024-04-08T11:40:01.978236Z",
-     "shell.execute_reply": "2024-04-08T11:40:01.976689Z",
-     "shell.execute_reply.started": "2024-04-08T11:39:41.741744Z"
+     "iopub.execute_input": "2024-04-09T08:49:59.543748Z",
+     "iopub.status.busy": "2024-04-09T08:49:59.542948Z",
+     "iopub.status.idle": "2024-04-09T08:50:18.927512Z",
+     "shell.execute_reply": "2024-04-09T08:50:18.925574Z",
+     "shell.execute_reply.started": "2024-04-09T08:49:59.543724Z"
     }
    },
    "outputs": [
@@ -175,17 +168,13 @@
     }
    ],
    "source": [
-    "runs = [\"20220708_GM12878\", \"20220708_GM12878R2\", \"20220817_HG001\", \"20220915_P1\", \"20220916_P1\", \"20220916_P2\"]\n",
     "array = []\n",
     "w = 400\n",
-    "\n",
     "for run in runs:\n",
     "    print(run)\n",
     "    fq = \"../../1_NanoStrandSeq/data/datasets/%s.fastq.gz\" % run\n",
-    "    \n",
     "    heads = []\n",
     "    tails = []\n",
-    "    \n",
     "    with gzip.open(fq, \"rt\") as f:\n",
     "        for i, read in enumerate(SeqIO.parse(f, \"fastq\")):\n",
     "            if i >= 10000:\n",
@@ -196,12 +185,12 @@
     "                tails.append(qs[-w:][::-1])\n",
     "    m1 = pd.DataFrame(heads)\n",
     "    m2 = pd.DataFrame(tails)\n",
-    "    array.append([m1, m2])\n"
+    "    array.append([m1, m2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "d41d040b",
    "metadata": {
     "ExecuteTime": {
@@ -209,11 +198,11 @@
      "start_time": "2024-01-23T09:10:30.050910Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:40:02.007906Z",
-     "iopub.status.busy": "2024-04-08T11:40:02.007619Z",
-     "iopub.status.idle": "2024-04-08T11:40:05.912104Z",
-     "shell.execute_reply": "2024-04-08T11:40:05.911628Z",
-     "shell.execute_reply.started": "2024-04-08T11:40:02.007885Z"
+     "iopub.execute_input": "2024-04-09T08:50:58.339062Z",
+     "iopub.status.busy": "2024-04-09T08:50:58.333424Z",
+     "iopub.status.idle": "2024-04-09T08:51:03.413467Z",
+     "shell.execute_reply": "2024-04-09T08:51:03.411667Z",
+     "shell.execute_reply.started": "2024-04-09T08:50:58.339030Z"
     }
    },
    "outputs": [
@@ -242,24 +231,18 @@
    ],
    "source": [
     "fig, axs = plt.subplots(2, 3, figsize=(10, 6), sharex=True, sharey=True)\n",
-    "\n",
     "for i in range(len(runs)):\n",
     "    run = runs[i]\n",
     "    m1, m2 = array[i]\n",
     "    print(run)\n",
-    "    \n",
-    "    row = int(i / 3)\n",
-    "    col = i % 3\n",
+    "    row, col = int(i / 3), i % 3\n",
     "    ax = axs[row][col]\n",
     "    plt.sca(ax)\n",
     "    plt.title(run)\n",
-    "        \n",
     "    xs1 = np.arange(w)\n",
     "    ys1 = m1.median() \n",
-    "\n",
     "    xs2 = np.arange(w)\n",
     "    ys2 = m2.median() \n",
-    "\n",
     "    plt.plot(xs1, ys1, color=\"C0\", label=\"Distance to the first base\")\n",
     "    plt.plot(xs2, ys2, color=\"C3\", label=\"Distance to the last base\")\n",
     "    if row == 1:\n",
@@ -275,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "5bdc218b",
    "metadata": {
     "ExecuteTime": {
@@ -283,11 +266,11 @@
      "start_time": "2024-01-23T09:10:33.361336Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:40:05.912982Z",
-     "iopub.status.busy": "2024-04-08T11:40:05.912747Z",
-     "iopub.status.idle": "2024-04-08T11:40:05.916751Z",
-     "shell.execute_reply": "2024-04-08T11:40:05.916327Z",
-     "shell.execute_reply.started": "2024-04-08T11:40:05.912964Z"
+     "iopub.execute_input": "2024-04-09T08:51:03.440068Z",
+     "iopub.status.busy": "2024-04-09T08:51:03.439276Z",
+     "iopub.status.idle": "2024-04-09T08:51:03.452252Z",
+     "shell.execute_reply": "2024-04-09T08:51:03.451856Z",
+     "shell.execute_reply.started": "2024-04-09T08:51:03.440049Z"
     }
    },
    "outputs": [
@@ -327,14 +310,6 @@
     "    accuracy = 1 - 10 ** (- score / 10)\n",
     "    print(score, accuracy, sep=\"\\t\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee648d09-e686-47b4-8122-a0d7837616b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
