--- a/0_PlotFigures/01_characteristic/02_summary_of_splitting.ipynb
+++ b/0_PlotFigures/01_characteristic/02_summary_of_splitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9ed03e45",
    "metadata": {
     "ExecuteTime": {
@@ -10,23 +10,19 @@
      "start_time": "2024-03-07T03:54:00.866625Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:40:54.603102Z",
-     "iopub.status.busy": "2024-04-08T11:40:54.602842Z",
-     "iopub.status.idle": "2024-04-08T11:41:20.809943Z",
-     "shell.execute_reply": "2024-04-08T11:41:20.808629Z",
-     "shell.execute_reply.started": "2024-04-08T11:40:54.603082Z"
+     "iopub.execute_input": "2024-04-09T08:52:26.041000Z",
+     "iopub.status.busy": "2024-04-09T08:52:26.040175Z",
+     "iopub.status.idle": "2024-04-09T08:52:26.137520Z",
+     "shell.execute_reply": "2024-04-09T08:52:26.137067Z",
+     "shell.execute_reply.started": "2024-04-09T08:52:26.040976Z"
     }
    },
    "outputs": [],
    "source": [
-    "import gzip\n",
-    "import glob\n",
-    "from collections import Counter, defaultdict\n",
+    "from collections import defaultdict\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from fbilr.reader import MatrixReader\n",
-    "\n",
     "runs = [\"20220708_GM12878\", \"20220708_GM12878R2\", \"20220817_HG001\", \"20220915_P1\", \"20220916_P1\", \"20220916_P2\"]"
    ]
   },
@@ -48,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "da322557",
    "metadata": {
     "ExecuteTime": {
@@ -56,11 +52,11 @@
      "start_time": "2024-03-07T03:46:30.210226Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:41:40.947788Z",
-     "iopub.status.busy": "2024-04-08T11:41:40.945864Z",
-     "iopub.status.idle": "2024-04-08T11:41:49.140989Z",
-     "shell.execute_reply": "2024-04-08T11:41:49.140419Z",
-     "shell.execute_reply.started": "2024-04-08T11:41:40.947767Z"
+     "iopub.execute_input": "2024-04-09T08:52:28.054166Z",
+     "iopub.status.busy": "2024-04-09T08:52:28.053833Z",
+     "iopub.status.idle": "2024-04-09T08:52:33.666338Z",
+     "shell.execute_reply": "2024-04-09T08:52:33.665808Z",
+     "shell.execute_reply.started": "2024-04-09T08:52:28.054146Z"
     }
    },
    "outputs": [
@@ -148,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "759bf344",
    "metadata": {
     "ExecuteTime": {
@@ -156,11 +152,11 @@
      "start_time": "2024-03-07T03:52:16.372959Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:42:05.648259Z",
-     "iopub.status.busy": "2024-04-08T11:42:05.647942Z",
-     "iopub.status.idle": "2024-04-08T11:42:06.645168Z",
-     "shell.execute_reply": "2024-04-08T11:42:06.644683Z",
-     "shell.execute_reply.started": "2024-04-08T11:42:05.648239Z"
+     "iopub.execute_input": "2024-04-09T08:52:45.038526Z",
+     "iopub.status.busy": "2024-04-09T08:52:45.038116Z",
+     "iopub.status.idle": "2024-04-09T08:52:46.359566Z",
+     "shell.execute_reply": "2024-04-09T08:52:46.165887Z",
+     "shell.execute_reply.started": "2024-04-09T08:52:45.038505Z"
     }
    },
    "outputs": [],
@@ -184,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bdda4ca0",
    "metadata": {
     "ExecuteTime": {
@@ -192,11 +188,11 @@
      "start_time": "2024-03-07T03:52:18.404107Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:42:13.813788Z",
-     "iopub.status.busy": "2024-04-08T11:42:13.810518Z",
-     "iopub.status.idle": "2024-04-08T11:42:16.234774Z",
-     "shell.execute_reply": "2024-04-08T11:42:16.234340Z",
-     "shell.execute_reply.started": "2024-04-08T11:42:13.813765Z"
+     "iopub.execute_input": "2024-04-09T08:52:48.542836Z",
+     "iopub.status.busy": "2024-04-09T08:52:48.542596Z",
+     "iopub.status.idle": "2024-04-09T08:52:50.609301Z",
+     "shell.execute_reply": "2024-04-09T08:52:50.608783Z",
+     "shell.execute_reply.started": "2024-04-09T08:52:48.542816Z"
     }
    },
    "outputs": [
@@ -265,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "849d0943",
    "metadata": {
     "ExecuteTime": {
@@ -273,11 +269,11 @@
      "start_time": "2024-03-07T03:52:43.677974Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:42:37.496937Z",
-     "iopub.status.busy": "2024-04-08T11:42:37.496614Z",
-     "iopub.status.idle": "2024-04-08T11:42:38.020754Z",
-     "shell.execute_reply": "2024-04-08T11:42:38.020327Z",
-     "shell.execute_reply.started": "2024-04-08T11:42:37.496917Z"
+     "iopub.execute_input": "2024-04-09T08:52:55.903566Z",
+     "iopub.status.busy": "2024-04-09T08:52:55.903203Z",
+     "iopub.status.idle": "2024-04-09T08:52:56.277202Z",
+     "shell.execute_reply": "2024-04-09T08:52:56.276757Z",
+     "shell.execute_reply.started": "2024-04-09T08:52:55.903544Z"
     }
    },
    "outputs": [
@@ -372,7 +368,7 @@
        "20220916_P2           1.0  0.007271   0.149826     0.015930  0.826972"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f4ac2690",
    "metadata": {
     "ExecuteTime": {
@@ -402,11 +398,11 @@
      "start_time": "2024-03-07T03:52:47.940425Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:42:47.945445Z",
-     "iopub.status.busy": "2024-04-08T11:42:47.943394Z",
-     "iopub.status.idle": "2024-04-08T11:42:49.115833Z",
-     "shell.execute_reply": "2024-04-08T11:42:49.115280Z",
-     "shell.execute_reply.started": "2024-04-08T11:42:47.945425Z"
+     "iopub.execute_input": "2024-04-09T08:52:57.110426Z",
+     "iopub.status.busy": "2024-04-09T08:52:57.110109Z",
+     "iopub.status.idle": "2024-04-09T08:52:58.093605Z",
+     "shell.execute_reply": "2024-04-09T08:52:58.088008Z",
+     "shell.execute_reply.started": "2024-04-09T08:52:57.110404Z"
     }
    },
    "outputs": [
@@ -450,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a2b8ebf5",
    "metadata": {
     "ExecuteTime": {
@@ -458,11 +454,11 @@
      "start_time": "2024-03-07T03:53:31.961285Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:42:55.799432Z",
-     "iopub.status.busy": "2024-04-08T11:42:55.799127Z",
-     "iopub.status.idle": "2024-04-08T11:42:56.785982Z",
-     "shell.execute_reply": "2024-04-08T11:42:56.785501Z",
-     "shell.execute_reply.started": "2024-04-08T11:42:55.799411Z"
+     "iopub.execute_input": "2024-04-09T08:53:21.106222Z",
+     "iopub.status.busy": "2024-04-09T08:53:21.103845Z",
+     "iopub.status.idle": "2024-04-09T08:53:24.257844Z",
+     "shell.execute_reply": "2024-04-09T08:53:24.256381Z",
+     "shell.execute_reply.started": "2024-04-09T08:53:21.106194Z"
     }
    },
    "outputs": [
@@ -508,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "87c2ef86",
    "metadata": {
     "ExecuteTime": {
@@ -516,11 +512,11 @@
      "start_time": "2024-03-07T03:54:05.112110Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:43:00.168125Z",
-     "iopub.status.busy": "2024-04-08T11:43:00.167611Z",
-     "iopub.status.idle": "2024-04-08T11:43:04.831407Z",
-     "shell.execute_reply": "2024-04-08T11:43:04.830891Z",
-     "shell.execute_reply.started": "2024-04-08T11:43:00.168106Z"
+     "iopub.execute_input": "2024-04-09T08:53:32.161439Z",
+     "iopub.status.busy": "2024-04-09T08:53:32.160582Z",
+     "iopub.status.idle": "2024-04-09T08:53:36.743762Z",
+     "shell.execute_reply": "2024-04-09T08:53:36.743215Z",
+     "shell.execute_reply.started": "2024-04-09T08:53:32.161412Z"
     }
    },
    "outputs": [
@@ -587,7 +583,6 @@
    ],
    "source": [
     "for run in runs:\n",
-    "    \n",
     "    path = \"../../1_NanoStrandSeq/results/demux/splitted/%s/reads.tsv\" % run\n",
     "    dat = pd.read_csv(path, sep=\"\\t\")\n",
     "    dat = dat[dat[\"Cell\"] != \"unclassified\"]\n",
@@ -616,14 +611,6 @@
     "    plt.tight_layout()\n",
     "    plt.savefig(\"figures/cell_read_number.%s.pdf\" % run, dpi=300)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "311f35fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
