--- a/0_PlotFigures/01_characteristic/03_summary_of_trimming.ipynb
+++ b/0_PlotFigures/01_characteristic/03_summary_of_trimming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9ed03e45",
    "metadata": {
     "ExecuteTime": {
@@ -10,23 +10,19 @@
      "start_time": "2024-03-07T03:54:54.986021Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:43:40.670570Z",
-     "iopub.status.busy": "2024-04-08T11:43:40.670268Z",
-     "iopub.status.idle": "2024-04-08T11:44:05.295257Z",
-     "shell.execute_reply": "2024-04-08T11:44:05.294708Z",
-     "shell.execute_reply.started": "2024-04-08T11:43:40.670550Z"
+     "iopub.execute_input": "2024-04-09T08:54:40.999460Z",
+     "iopub.status.busy": "2024-04-09T08:54:40.995446Z",
+     "iopub.status.idle": "2024-04-09T08:54:41.028215Z",
+     "shell.execute_reply": "2024-04-09T08:54:41.027786Z",
+     "shell.execute_reply.started": "2024-04-09T08:54:40.999437Z"
     }
    },
    "outputs": [],
    "source": [
-    "import gzip\n",
     "import glob\n",
-    "from collections import Counter, defaultdict\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from fbilr.reader import MatrixReader\n",
-    "\n",
     "runs = [\"20220708_GM12878\", \"20220708_GM12878R2\", \"20220817_HG001\", \"20220915_P1\", \"20220916_P1\",  \"20220916_P2\"]"
    ]
   },
@@ -40,49 +36,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5dfbc0fe",
+   "execution_count": 5,
+   "id": "183763fe-7a1e-42f0-89dc-1fb14bfc7882",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-07T03:57:32.987173Z",
-     "start_time": "2024-03-07T03:57:32.852511Z"
-    },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:44:05.302663Z",
-     "iopub.status.busy": "2024-04-08T11:44:05.301812Z",
-     "iopub.status.idle": "2024-04-08T11:44:14.742173Z",
-     "shell.execute_reply": "2024-04-08T11:44:14.741522Z",
-     "shell.execute_reply.started": "2024-04-08T11:44:05.302634Z"
+     "iopub.execute_input": "2024-04-09T08:57:40.939578Z",
+     "iopub.status.busy": "2024-04-09T08:57:40.937206Z",
+     "iopub.status.idle": "2024-04-09T08:57:52.354716Z",
+     "shell.execute_reply": "2024-04-09T08:57:52.276005Z",
+     "shell.execute_reply.started": "2024-04-09T08:57:40.939555Z"
     }
    },
    "outputs": [],
    "source": [
-    "rows = []\n",
+    "array = []\n",
     "for run in runs:\n",
-    "    for path in sorted(glob.glob(\"../../1_NanoStrandSeq/results/demux/trimmed/%s/*.log\" % run)):\n",
-    "        row = []\n",
-    "        for line in open(path):\n",
-    "            if \"%\" in line:\n",
-    "                v = int(line.split()[-2])\n",
-    "                row.append(v)\n",
-    "        rows.append(row)"
+    "    for path in sorted(glob.glob(\"../../1_NanoStrandSeq/results/demux/trimmed/%s/*/stats.tsv\" % run)):\n",
+    "        array.append(pd.read_csv(path, sep=\"\\t\"))   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9cc6823d",
+   "execution_count": 11,
+   "id": "43d22d13-cdfa-4354-ac8c-82c1170cef24",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-07T03:57:34.258766Z",
-     "start_time": "2024-03-07T03:57:34.235675Z"
-    },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:44:14.744380Z",
-     "iopub.status.busy": "2024-04-08T11:44:14.744088Z",
-     "iopub.status.idle": "2024-04-08T11:44:16.171498Z",
-     "shell.execute_reply": "2024-04-08T11:44:16.170661Z",
-     "shell.execute_reply.started": "2024-04-08T11:44:14.744360Z"
+     "iopub.execute_input": "2024-04-09T08:59:30.298083Z",
+     "iopub.status.busy": "2024-04-09T08:59:30.295533Z",
+     "iopub.status.idle": "2024-04-09T08:59:30.548235Z",
+     "shell.execute_reply": "2024-04-09T08:59:30.547832Z",
+     "shell.execute_reply.started": "2024-04-09T08:59:30.298061Z"
     }
    },
    "outputs": [
@@ -208,13 +191,13 @@
        "[473 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = pd.DataFrame(rows, columns=[\"Total\", \"TooShort\", \"NoLinker\", \"IsChimeric\", \"Pass\"])\n",
+    "d = pd.concat(array, ignore_index=True)\n",
     "d = d[d[\"Total\"] >= 100000]\n",
     "d = d.divide(d[\"Total\"], axis=0)\n",
     "d = d[[\"NoLinker\", \"IsChimeric\", \"Pass\"]]\n",
@@ -224,19 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c2e85c35",
+   "execution_count": 12,
+   "id": "b3747fe1-f8fb-4cf8-9c9b-f6688de71623",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-07T03:57:47.453856Z",
-     "start_time": "2024-03-07T03:57:47.071698Z"
-    },
     "execution": {
-     "iopub.execute_input": "2024-04-08T11:44:16.176593Z",
-     "iopub.status.busy": "2024-04-08T11:44:16.175946Z",
-     "iopub.status.idle": "2024-04-08T11:44:22.857352Z",
-     "shell.execute_reply": "2024-04-08T11:44:22.856821Z",
-     "shell.execute_reply.started": "2024-04-08T11:44:16.176573Z"
+     "iopub.execute_input": "2024-04-09T08:59:45.354814Z",
+     "iopub.status.busy": "2024-04-09T08:59:45.352895Z",
+     "iopub.status.idle": "2024-04-09T08:59:50.938188Z",
+     "shell.execute_reply": "2024-04-09T08:59:50.937685Z",
+     "shell.execute_reply.started": "2024-04-09T08:59:45.354793Z"
     }
    },
    "outputs": [
@@ -254,13 +233,11 @@
    "source": [
     "means = d.mean(axis=0) * 100\n",
     "stds = d.std(axis=0) * 100\n",
-    "\n",
     "labels = [\n",
     "    \"No confident dual-linker\\n(%.2f ± %.2f%%)\" % (means[0], stds[0]),\n",
     "    \"Chimeric (%.2f ± %.2f%%)\" % (means[1], stds[1]),\n",
     "    \"Pass trimming\\n(%.2f ± %.2f%%)\" % (means[2], stds[2]),\n",
     "]\n",
-    "\n",
     "plt.figure(figsize=(5, 3))\n",
     "plt.pie(means, radius=1,\n",
     "        wedgeprops=dict(width=0.5, edgecolor='w'),\n",
