--- a/0_PlotFigures/01_characteristic/04_summary_of_mapping.ipynb
+++ b/0_PlotFigures/01_characteristic/04_summary_of_mapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "cee257e2",
    "metadata": {
     "ExecuteTime": {
@@ -10,19 +10,15 @@
      "start_time": "2024-03-07T04:01:27.099740Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-09T01:27:39.458897Z",
-     "iopub.status.busy": "2024-04-09T01:27:39.458622Z",
-     "iopub.status.idle": "2024-04-09T01:28:06.771087Z",
-     "shell.execute_reply": "2024-04-09T01:28:06.769454Z",
-     "shell.execute_reply.started": "2024-04-09T01:27:39.458877Z"
+     "iopub.execute_input": "2024-04-09T09:01:36.646961Z",
+     "iopub.status.busy": "2024-04-09T09:01:36.646656Z",
+     "iopub.status.idle": "2024-04-09T09:01:36.649513Z",
+     "shell.execute_reply": "2024-04-09T09:01:36.649101Z",
+     "shell.execute_reply.started": "2024-04-09T09:01:36.646941Z"
     }
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import gzip\n",
-    "import glob\n",
-    "from collections import Counter, defaultdict\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -38,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8d54a985",
    "metadata": {
     "ExecuteTime": {
@@ -46,22 +42,20 @@
      "start_time": "2024-03-07T04:01:48.459516Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-09T01:28:06.816061Z",
-     "iopub.status.busy": "2024-04-09T01:28:06.815784Z",
-     "iopub.status.idle": "2024-04-09T01:28:35.985768Z",
-     "shell.execute_reply": "2024-04-09T01:28:35.985271Z",
-     "shell.execute_reply.started": "2024-04-09T01:28:06.816045Z"
+     "iopub.execute_input": "2024-04-09T09:00:51.805621Z",
+     "iopub.status.busy": "2024-04-09T09:00:51.805130Z",
+     "iopub.status.idle": "2024-04-09T09:01:26.183948Z",
+     "shell.execute_reply": "2024-04-09T09:01:26.183419Z",
+     "shell.execute_reply.started": "2024-04-09T09:00:51.805598Z"
     }
    },
    "outputs": [],
    "source": [
-    "dat = pd.read_excel(\"../../1_NanoStrandSeq/data/NanoStrandSeq.xls\")\n",
+    "dat = pd.read_excel(\"../../1_NanoStrandSeq/data/NanoStrandSeq.xlsx\")\n",
     "runs = [\"20220708_GM12878\",  \"20220708_GM12878R2\", \"20220817_HG001\", \"20220915_P1\",\"20220916_P1\", \"20220916_P2\"]\n",
-    "\n",
     "rows = []\n",
     "for run in runs:\n",
     "    cells = dat[dat[\"Run\"] == run][\"Cell\"].values\n",
-    "    \n",
     "    row = []\n",
     "    \n",
     "    path = \"../../1_NanoStrandSeq/results/demux/splitted/%s.log\" % run\n",
@@ -100,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "8ee86b4b",
    "metadata": {
     "ExecuteTime": {
@@ -108,11 +102,11 @@
      "start_time": "2024-03-07T04:01:56.684670Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-09T01:28:35.986848Z",
-     "iopub.status.busy": "2024-04-09T01:28:35.986515Z",
-     "iopub.status.idle": "2024-04-09T01:28:46.414663Z",
-     "shell.execute_reply": "2024-04-09T01:28:46.414236Z",
-     "shell.execute_reply.started": "2024-04-09T01:28:35.986829Z"
+     "iopub.execute_input": "2024-04-09T09:01:41.182209Z",
+     "iopub.status.busy": "2024-04-09T09:01:41.181897Z",
+     "iopub.status.idle": "2024-04-09T09:01:42.618638Z",
+     "shell.execute_reply": "2024-04-09T09:01:42.618225Z",
+     "shell.execute_reply.started": "2024-04-09T09:01:41.182188Z"
     }
    },
    "outputs": [
