Checked 0_PlotFigures/03_inversions

--- a/0_PlotFigures/03_inversions/01_schema_of_inversion.ipynb
+++ b/0_PlotFigures/03_inversions/01_schema_of_inversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2bec582c",
    "metadata": {
     "ExecuteTime": {
@@ -10,11 +10,11 @@
      "start_time": "2024-01-25T02:59:56.499795Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-09T01:41:13.823616Z",
-     "iopub.status.busy": "2024-04-09T01:41:13.822088Z",
-     "iopub.status.idle": "2024-04-09T01:41:22.371730Z",
-     "shell.execute_reply": "2024-04-09T01:41:22.371046Z",
-     "shell.execute_reply.started": "2024-04-09T01:41:13.823575Z"
+     "iopub.execute_input": "2024-04-10T02:43:11.285088Z",
+     "iopub.status.busy": "2024-04-10T02:43:11.284485Z",
+     "iopub.status.idle": "2024-04-10T02:43:11.287436Z",
+     "shell.execute_reply": "2024-04-10T02:43:11.287018Z",
+     "shell.execute_reply.started": "2024-04-10T02:43:11.285067Z"
     }
    },
    "outputs": [],
@@ -24,8 +24,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc92563d-c70a-417c-88d7-1287c4afb362",
+   "metadata": {},
+   "source": [
+    "# Schema of inversions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "68dfa135",
    "metadata": {
     "ExecuteTime": {
@@ -33,11 +41,11 @@
      "start_time": "2024-01-25T03:00:35.580687Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-04-09T01:41:22.470680Z",
-     "iopub.status.busy": "2024-04-09T01:41:22.470312Z",
-     "iopub.status.idle": "2024-04-09T01:41:28.629365Z",
-     "shell.execute_reply": "2024-04-09T01:41:28.628753Z",
-     "shell.execute_reply.started": "2024-04-09T01:41:22.470658Z"
+     "iopub.execute_input": "2024-04-10T02:43:12.029763Z",
+     "iopub.status.busy": "2024-04-10T02:43:12.029278Z",
+     "iopub.status.idle": "2024-04-10T02:43:14.192660Z",
+     "shell.execute_reply": "2024-04-10T02:43:14.192230Z",
+     "shell.execute_reply.started": "2024-04-10T02:43:12.029741Z"
     }
    },
    "outputs": [
