--- a/0_PlotFigures/02_pseudobulk/06_benchmark_of_sv_v2.ipynb
+++ b/0_PlotFigures/02_pseudobulk/06_benchmark_of_sv_v2.ipynb
@@ -273,8 +273,7 @@
     "ExecuteTime": {
      "end_time": "2023-05-16T06:11:54.897441Z",
      "start_time": "2023-05-16T06:11:54.294089Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -1188,7 +1187,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1202,7 +1201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
